HashTraits.h should include template specialization for WTF::String https://bugs.webkit.org/show_bug.cgi?id=67851

Ensure that the template specialization for HashTraits<String> is always
picked up. (Previously it was possible to include HashSet and String but
not the correct HashTraits, so you would get an inefficient template
instantiation.)

Patch by Iain Merrick <husky@google.com> on 2011-09-14
Reviewed by Darin Adler.

* wtf/HashTraits.h:
* wtf/text/StringHash.h:

git-svn-id: svn://svn.chromium.org/blink/trunk@95090 bbb929c8-8fbe-4397-9dbb-9b2b20218538