third_party/WebKit/Source/JavaScriptCore/wtf/text/StringHash.h
@@ -180,8 +180,6 @@ namespace WTF {
         }
     };
 
-    template<> struct HashTraits<String> : SimpleClassHashTraits<String> { };
-
 }
 
 using WTF::StringHash;
